--- a/Fel_4/exit_nodejs/views/header.html
+++ b/Fel_4/exit_nodejs/views/header.html
@@ -29,7 +29,13 @@
 		<div id="logo"> <img src="/images/kthexit.png" width=680 height=83 style=padding:10px;> 		<a href="http://www.kth.se" id="homeLink" title="Till KTH:s startsida">
 			<img src="/images/kth.png" width=103 height=103 align=left></a>
 		</div>
-
+		<div id="google_translate_element"></div>
+		<script type="text/javascript">
+			function googleTranslateElementInit() {
+			  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+			}
+		</script>
+		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	</div><!-- header -->
 
 	
