--- a/Fel_4/exit_nodejs/views/header.html
+++ b/Fel_4/exit_nodejs/views/header.html
@@ -32,10 +32,10 @@
 		<div id="google_translate_element"></div>
 		<script type="text/javascript">
 			function googleTranslateElementInit() {
-			  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+			  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'sv,en,de,ru,es,', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false}, 'google_translate_element');
 			}
-		</script>
-		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+			</script>
+			<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	</div><!-- header -->
 
 	
