--- a/Fel_4/exit_nodejs/views/help.html
+++ b/Fel_4/exit_nodejs/views/help.html
@@ -1,8 +1,76 @@
-<div class="container">
-	<div id="content">
+<body onload="changeDisplay('q1'), changeDisplay('q2'), changeDisplay('q3'), changeDisplay('askForm')">
+	<div class="container">
+		
+		<div id="content">
 		<h1>Help</h1>At this page you can get help if you have problems with the system.<p></p><b>Logging into the system</b><br />To be able to log into the system you need to have a valid KTH account. 
-    If you have an account and you still can not log in, the problem is not in the KTH-EXIT system. 
-    If that is the case, you need to contact KTH administration. </p>
+    	If you have an account and you still can not log in, the problem is not in the KTH-EXIT system. 
+    	If that is the case, you need to contact KTH administration. </p>
 
-	</div><!-- content -->
-</div>
+		</div><!-- content -->
+		
+		<div id="content">
+			<a href="javascript:changeDisplay('q1')">Q1</a>
+		</div>
+		<div id="q1">
+			Some answer to question 1.
+		</div>
+		<div id = "content">
+			<a href="javascript:changeDisplay('q2')">Q2</a>
+		</div>
+		<div id="q2">
+			Some answer to question 2.
+		</div>
+		
+		<div id = "content">
+			<a href="javascript:changeDisplay('q3')">Q3</a>
+		</div>
+		<div id="q3">
+			Some answer to question 3.
+		</div>
+		
+		<div id ="content">
+			<a href="javascript:changeDisplay('askForm')">Ask oss a question</a>
+	
+		</div>
+		
+			
+			<form  id = "askForm" name="askForm" onsubmit="return validateForm()">
+				<p>Fields with <font color="red">*</font> are required.</p>
+				Question <font color="red">*</font><br /><input type="text" name="question"></br>
+				Language <font color="red">*</font><br /><input type="text" name="lan"></br>
+				Firstname<br /><input type="text" name="fname"></br>
+				Lastname <br /><input type="text" name="lname"></br>
+				Email <font color="red">*</font><br /><input type="text" name="email"></br>
+		
+				<input type="submit" value="Submit">
+		  	</form>
+		
+		<script type = "text/javascript">
+				function changeDisplay(id){
+					var element = document.getElementById(id);
+					if(element.style.display=='none'){
+						element.style.display='block';
+					}
+					else {
+						element.style.display='none';
+					}
+				
+				}
+				function validateForm() {
+  					var q = document.forms["askForm"]["question"].value;
+					var l = document.forms["askForm"]["lan"].value;
+					var fname = document.forms["askForm"]["fname"].value;
+					var lname = document.forms["askForm"]["lname"].value;
+					var mail = document.forms["askForm"]["email"].value;
+  					if (q == "" || l =="" || mail == "") {
+    					alert("The fields marked with * can not be empty");
+    					return false;
+  					}
+					else{
+						alert("Your question has been sent");
+					}
+				}
+		</script>    
+
+	</div>
+	</body>
