--- a/Fel_4/exit_nodejs/views/help.html
+++ b/Fel_4/exit_nodejs/views/help.html
@@ -29,7 +29,7 @@
 		</div>
 		
 		<div id ="content">
-			<a href="javascript:changeDisplay('askForm')">Ask oss a question</a>
+			<a href="javascript:changeDisplay('askForm')">Ask a question</a>
 	
 		</div>
 		
