--- a/Fel_4/exit_nodejs/views/help.html
+++ b/Fel_4/exit_nodejs/views/help.html
@@ -7,36 +7,42 @@
     	If that is the case, you need to contact KTH administration. </p>
 
 		</div><!-- content -->
-		
+		<div id = "faq">
+			<b>
+				Frequently asked questions (FAQ)
+			</b>
+		</div>
 		<div id="content">
-			<a href="javascript:changeDisplay('q1')">Q1</a>
+			<a href="javascript:changeDisplay('q1')">How do i log in to EXIT</a>
 		</div>
 		<div id="q1">
-			Some answer to question 1.
+			You log in to the system with your KTH account. If you are new to the system you need to be added first.</br>
+			The easiest way to log in is through the "Log in menu" via www.Exit.se
 		</div>
 		<div id = "content">
-			<a href="javascript:changeDisplay('q2')">Q2</a>
+			<a href="javascript:changeDisplay('q2')">I've forgotten my password, what should I do?</a>
 		</div>
 		<div id="q2">
-			Some answer to question 2.
+			In case you have forgotten your password, you need to visit KTH Entré to get a new one.</br>
+			Please note that you must provide an acceptable form of identification.
 		</div>
 		
 		<div id = "content">
-			<a href="javascript:changeDisplay('q3')">Q3</a>
+			<a href="javascript:changeDisplay('q3')">I have trouble adding budget year, what do i do?</a>
 		</div>
 		<div id="q3">
-			Some answer to question 3.
+			You can try to open the application in another browser if the problem still exist, please contact it-support@kth.se
 		</div>
 		
 		<div id ="content">
-			<a href="javascript:changeDisplay('askForm')">Ask a question</a>
+			<a href="javascript:changeDisplay('askForm')"><b>Ask a question</b></a>
 	
 		</div>
 		
 			
 			<form  id = "askForm" name="askForm" onsubmit="return validateForm()">
 				<p>Fields with <font color="red">*</font> are required.</p>
-				Question <font color="red">*</font><br /><input type="text" name="question"></br>
+				Question <font color="red">*</font><br /><input id ="questions" type="text" name="question"></br>
 				Language <font color="red">*</font><br /><input type="text" name="lan"></br>
 				Firstname<br /><input type="text" name="fname"></br>
 				Lastname <br /><input type="text" name="lname"></br>
